Ajuste .gitignore e csproj

--- a/src/Xam.Plugins.Forms.ImagePaint.Android/Xam.Plugins.Forms.ImagePaint.Android.csproj
+++ b/src/Xam.Plugins.Forms.ImagePaint.Android/Xam.Plugins.Forms.ImagePaint.Android.csproj
@@ -22,7 +22,7 @@
     </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup>
-    <IntermediateOutputPath>C:\DEV\Xam.Plugins.Forms.ImagePaint\src</IntermediateOutputPath>
+    <IntermediateOutputPath>C:\DEV\GITHUB\Xam.Plugins.Forms.ImagePaint\src</IntermediateOutputPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
