--- a/.gitignore
+++ b/.gitignore
@@ -340,3 +340,4 @@ ASALocalRun/
 # BeatPulse healthcheck temp database
 healthchecksdb
 /demo/Demo.XFImagePaint/MonoAndroid81/**
+/src/MonoAndroid81/**
